--- a/sample-viewer/src/app/header/header.component.html
+++ b/sample-viewer/src/app/header/header.component.html
@@ -1,8 +1,11 @@
-<header class="container blue-gradient">
+<header class="container cvisb-header" [ngClass]="{prodEnvironment ? 'blue-gradient' : 'purple-gradient'}">
   <div class="logo">
     <a href="./" alt="home link">
       <img src="/assets/img/cvisb_icon_transparent_600px.png" alt="CViSB logo"/>
     </a>
+    <div class="dev-warning" *ngIf="!prodEnvironment">
+      Development version
+    </div>
   </div>
 
   <div class="menu-items">
