--- a/sample-viewer/src/app/header/header.component.html
+++ b/sample-viewer/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="container cvisb-header" [ngClass]="{prodEnvironment ? 'blue-gradient' : 'purple-gradient'}">
+<header class="container cvisb-header" [ngClass]="prodEnvironment ? 'blue-gradient' : 'purple-gradient'">
   <div class="logo">
     <a href="./" alt="home link">
       <img src="/assets/img/cvisb_icon_transparent_600px.png" alt="CViSB logo"/>
