update header if dev

--- a/sample-viewer/src/app/header/header.component.scss
+++ b/sample-viewer/src/app/header/header.component.scss
@@ -8,7 +8,7 @@
   background: linear-gradient(270deg, $cvisb-dark, $cvisb-bright);
 }
 
-.blue-gradient {
+.purple-gradient {
   // background: linear-gradient(270deg, $cvisb-dark, #8c77bb);
   background: linear-gradient(270deg,#716194,#8c77bb);
 }
