fix minor issues

--- a/sample-viewer/src/app/header/header.component.scss
+++ b/sample-viewer/src/app/header/header.component.scss
@@ -1,3 +1,4 @@
+@import '../../sass/material-theme.scss'; // custom variables, usually colors
 @import '../../sass/variables.scss'; // custom variables, usually colors
 
 .cvisb-header {
