--- a/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.scss
@@ -17,8 +17,9 @@
   display: flex;
 }
 
+// Patient HLA circle packing
 .patients {
-  margin-right: 25px;
+  margin-right: 50px;
 }
 
 .allele-group {
