--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -1,27 +1,30 @@
-<div class="filter-header">
-  <h1 class="page-header">Data Files</h1>
-  <app-filter-files [datasets] = "datasets"></app-filter-files>
-</div>
+<div *ngIf="datasets">
 
-<div class="grid-container">
-
-  <div class="grid-item dataset-list">
-    <!-- DATASET LOOP -->
-    <div class="dataset" *ngFor="let dataset of datasets">
-      <div class="dataset-header">
-        <h4><a [routerLink]="['/dataset', dataset.identifier]">{{ dataset.name }}</a>
-          <span class="keyword" *ngFor="let keyword of dataset.keywords">{{ keyword }}</span>
-        </h4>
-        <div class="dataset-description">
-          {{dataset.description}}
-        </div>
-      </div>
-
-
-      <app-file-list [dataset]="dataset"></app-file-list>
-    </div>
+  <div class="filter-header">
+    <h1 class="page-header">Data Files</h1>
+    <app-filter-files [datasets]="datasets"></app-filter-files>
   </div>
 
-  <div class="grid-item metadata">
-    <app-file-metadata></app-file-metadata>
+  <div class="grid-container">
+
+    <div class="grid-item dataset-list">
+      <!-- DATASET LOOP -->
+      <div class="dataset" *ngFor="let dataset of datasets">
+        <div class="dataset-header">
+          <h4><a [routerLink]="['/dataset', dataset.identifier]">{{ dataset.name }}</a>
+          <span class="keyword" *ngFor="let keyword of dataset.keywords">{{ keyword }}</span>
+        </h4>
+          <div class="dataset-description">
+            {{dataset.description}}
+          </div>
+        </div>
+
+
+        <app-file-list [dataset]="dataset"></app-file-list>
+      </div>
+    </div>
+
+    <div class="grid-item metadata">
+      <app-file-metadata></app-file-metadata>
+    </div>
   </div>
