--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -38,5 +38,5 @@
 
     </div>
   </div>
-  <span *embedJsonld="schema_dataset"></span>
+  <span *embedJsonld="schema_dataset" *ngIf="schema_dataset"></span>
 </div>
