+ download patient list

--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -1,7 +1,11 @@
 <div *ngIf="datasets">
 
   <div class="filter-header">
-    <h1 class="page-header">Data Files</h1>
+
+    <div class="page-header">
+      <h1>Data Files</h1>
+    </div>
+
     <app-filter-files [datasets]="datasets"></app-filter-files>
   </div>
 
