--- a/sample-viewer/src/app/sample/sample.component.html
+++ b/sample-viewer/src/app/sample/sample.component.html
@@ -1,4 +1,7 @@
-<h1 class="page-header">Samples</h1>
+<div class="page-header">
+  <h1>Samples</h1>
+</div>
+
 <form [formGroup]="locationForms" (ngSubmit)="onSubmit()">
   <h1>
   <button mat-stroked-button color="accent" type="button" (click)="clearInput()">
