--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -62,16 +62,23 @@ a {
 }
 
 .page-header {
-  font-family: 'Open Sans';
-  font-weight: 800;
-  text-transform: uppercase;
-  font-size: 4.5em;
-  margin-top: 0;
-  margin-bottom: 0.25em;
-  letter-spacing: 0.15em;
-  word-spacing: 0.15em;
-  text-shadow: 5px 5px 7px $grey-200;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  h1 {
+    font-family: 'Open Sans';
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 4.5em;
+    margin-top: 0.15em;
+    margin-bottom: 0.15em;
+    letter-spacing: 0.15em;
+    word-spacing: 0.15em;
+    text-shadow: 5px 5px 7px $grey-200;
+  }
 }
+
 // --- Icons ---
 @mixin mat-icon-size($size: 24px) {
   font-size: $size;
