--- a/sample-viewer/src/app/hla/allele-bar/allele-bar.component.scss
+++ b/sample-viewer/src/app/hla/allele-bar/allele-bar.component.scss
@@ -1,11 +1,16 @@
 #unique-allele-bar {
   & .axis--y {
-    path, line {
+    line,
+    path {
       display: none;
     }
+
     text {
       font-size: 1.5em;
     }
   }
+}
 
+.subtitle {
+  font-size: 0.8em;
 }
