--- a/sample-viewer/src/app/dataset-page/hla-page/hla-summary/hla-summary.component.html
+++ b/sample-viewer/src/app/dataset-page/hla-page/hla-summary/hla-summary.component.html
@@ -31,7 +31,7 @@
 
       <div class="item-group">
         <div class="item bar-graph">
-          <app-allele-bar [data]="novelAlleles" title="Number of *Novel* Alleles"></app-allele-bar>
+          <app-allele-bar [data]="novelAlleles" title="Number of *Novel* Alleles" subtitle="Relative to the [IPD-IMGT/HLA Database](https://www.ebi.ac.uk/ipd/imgt/hla/)"></app-allele-bar>
         </div>
         <div class="item">
           <app-allele-circle-packing [data]="alleleCount" [scale]="0.48" class="novel-alleles"></app-allele-circle-packing>
