--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -39,5 +39,6 @@
     </div>
   </div>
   <span *ngIf="schema_dataset"><span *embedJsonld="schema_dataset"></span></span>
+  <span><span *embedJsonld="schema_dataset"></span></span>
   <span *embedJsonld="'schema_dataset'"></span>
 </div>
