Fix sticky tooltip on fast mouse move

--- a/sample-viewer/src/app/dataset-page/hla-page/allele-circle-packing/allele-circle-packing.component.scss
+++ b/sample-viewer/src/app/dataset-page/hla-page/allele-circle-packing/allele-circle-packing.component.scss
@@ -45,7 +45,10 @@ div.tooltip {
   border: 0;
   border-radius: 3px;
   pointer-events: none;
+  display: none;
 }
+
+
 
 .title--allele,
 .title--locus {
