temp remove HLA

--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -22,9 +22,9 @@
         </div>
       </div>
 
-      <ng-container *ngIf="dataset.identifier === 'hla'" id="compare">
+      <!-- <ng-container *ngIf="dataset.identifier === 'hla'" id="compare">
         <app-hla-page></app-hla-page>
-      </ng-container>
+      </ng-container> -->
 
       <div id="files">
         <h3>Download files and view metadata</h3>
