--- a/sample-viewer/src/app/dataset-page/hla-page/hla-summary/hla-summary.component.html
+++ b/sample-viewer/src/app/dataset-page/hla-page/hla-summary/hla-summary.component.html
@@ -2,14 +2,14 @@
 <div class="container hla-summary-container">
 
   <div class="container left-container">
-    <!-- <div class="patient-count-container">
+    <div class="patient-count-container">
       <span class="patient-count summary-item">
   <div class="num-patients">{{ patientCount }}</div>
    <div class="annot--patients">patients sequenced:</div>
  </span>
 
       <app-filter-patient-type [viruses]="patientTypes" [outcomes]="patientOutcomes" class="summary-item"></app-filter-patient-type>
-    </div> -->
+    </div>
 
   </div>
 
