directly call oauth from login nav link

--- a/sample-viewer/src/app/header/header.component.html
+++ b/sample-viewer/src/app/header/header.component.html
@@ -22,7 +22,7 @@
         </li>
 
         <li class="menu-item page_item" *ngIf="!loggedIn">
-          <a routerLink="login" routerLinkActive #rla="routerLinkActive" routerLinkActive="current-menu-item" [routerLinkActiveOptions]="{exact: true}">
+          <a routerLink="login" routerLinkActive #rla="routerLinkActive" routerLinkActive="current-menu-item" [routerLinkActiveOptions]="{exact: true}" (click)="login()">
               login
             </a>
         </li>
