--- a/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.scss
+++ b/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.scss
@@ -29,6 +29,9 @@ svg-icon {
   background-color: lighten($grey-200, 10%);
   padding: 5px 8px 5px 5px;
   border-radius: 5px;
+  &:hover {
+    background-color: $grey-100;
+  }
 }
 
 .file-count {
