--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
@@ -39,6 +39,10 @@ $icon-size: 45px;
   margin: 0.5em 1.5em 0.5em 0;
   padding: 5px 8px 5px 5px;
   border-radius: 5px;
+
+  &:hover {
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0), 0 2px 2px 0 rgba(0, 0, 0, .5), 0 1px 5px 0 rgba(0, 0, 0, 0.3);
+  }
 }
 
 svg-icon {
@@ -102,7 +106,6 @@ svg-icon {
 .timepoint::before {
   // content: "T";
 }
-
 // --- related patients ---
 .related {
   display: flex;
