--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -1,4 +1,4 @@
-<div class="filter-container" *ngIf='patients && patients.length > 0'>
+<div class="filter-container" *ngIf='patients && patients.length > 0 && patientSummary.length > 1'>
   <div class="filter-header">
     <div class="container">
       <h2>{{patients.length}} of {{patients.length}} Patients Selected</h2>
