initial filtering test

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -35,6 +35,6 @@
   </div>
 
   <div class="filter-item filter-ctry">
-    <app-filter-location [countries]="patientSummary.patientCountries"></app-filter-location>
+    <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient"></app-filter-location>
   </div>
 </div>
