add in clearFilters

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -6,7 +6,7 @@
       <div class="pull-right">
         <app-filter-search></app-filter-search>
 
-        <button mat-stroked-button>clear filters</button>
+        <button mat-stroked-button (click)="clearFilters()">clear filters</button>
       </div>
 
     </div>
