fix donut tweening, add filtering

--- a/sample-viewer/src/app/dataset/filter-files/filter-files.component.html
+++ b/sample-viewer/src/app/dataset/filter-files/filter-files.component.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="filter-item filter-patient-types">
-    <app-filter-patient-type [viruses]="datasetSummary.patientTypes" [outcomes]="datasetSummary.patientOutcomes"></app-filter-patient-type>
+    <app-filter-patient-type [viruses]="datasetSummary.patientTypes" [outcomes]="datasetSummary.patientOutcomes" endpoint="dataset"></app-filter-patient-type>
   </div>
 
   <div class="filter-item filter-elisas">
