--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
@@ -8,6 +8,6 @@
 
   <div class="filter-subtype filter-outcome">
     <h5 class="filter-sublabel">outcome</h5>
-    <app-mini-barplot [data]="outcomes" [name_var]="'key'" [height]="plot_height"></app-mini-barplot>
+    <app-mini-barplot [data]="outcomes" [name_var]="'key'" [height]="plot_height" [endpoint]="endpoint"></app-mini-barplot>
   </div>
 </div>
