--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -280,6 +280,7 @@ svg-icon.country-icon {
 .filter-header {
   flex-basis: 100%;
   padding-bottom: 0;
+  margin-bottom: 10px;
 
   h2 {
     margin: 0;
