--- a/sample-viewer/src/app/filters/filter-search/filter-search.component.html
+++ b/sample-viewer/src/app/filters/filter-search/filter-search.component.html
@@ -1,8 +1,8 @@
 <form class="search" method="post" action="">
-  <label for="search-box-add"><mat-icon>search</mat-icon></label>
+  <!-- <label for="search-box-add"><mat-icon>search</mat-icon></label> -->
 
   <input id="search-box" type="text" class="quick-search form-control"
-  name="quick_search" aria-label="quick search" placeholder="search for file names" autofocus>
-<!-- [(ngModel)]="query" (keyup.enter)="onEnter()" -->
+  name="quick_search" aria-label="quick search" placeholder="&#xF002; Search" autofocus
+  [(ngModel)]="query" (keyup.enter)="submitQuery()" >
 
 </form>
