--- a/sample-viewer/src/app/filters/filter-search/filter-search.component.scss
+++ b/sample-viewer/src/app/filters/filter-search/filter-search.component.scss
@@ -1,42 +1,33 @@
 @import '../../../sass/variables.scss';
 @import '../../../sass/material-theme.scss';
 
-form {
-  margin-top: 5px;
-  margin-right: 10px;
-}
-
-.search label,
-.search mat-icon {
-  position: absolute;
-  margin: 1px 0px;
-  // color: #9ba4ae;
-}
-
-.search input[type="text"] {
-  font-family: "Lato", sans-serif;
-  font-weight: 300;
-  text-indent: 10px;
+.search input[type=text] {
+  width: 1em;
+  font-size: 1em;
   padding: 0 0 0 22px;
-  width: 0;
   height: 30px;
   background: none;
   border: none;
   -webkit-transition: width 0.5s ease-in-out;
   -moz-transition: width 0.5s ease-in-out;
+  transition: width 0.5s ease-in-out;
   cursor: pointer;
   float: right;
+  font-family: "Lato", "FontAwesome", sans-serif;
+  font-weight: 300;
+  margin: 5px 20px 5px 5px;
 }
 
-.search input[type="text"]:focus {
+.search input[type=text]:focus {
   width: 200px;
   background: accent(50);
   outline: none;
   cursor: text;
 }
 
-@media only screen and (max-width: 760px) {
-  .search input[type="text"]:focus {
-    width: 75vw;
-  }
-}
+// @media only screen and (max-width: 760px) {
+//   .search input[type="text"]:focus {
+//     width: 75vw;
+//   }
+// }
+//
