+ filter patient IDs

--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
@@ -10,6 +10,7 @@
             [hideSelected]="true"
             bindLabel="name"
             placeholder="Select patients"
+            (ngModelChange)="filterPatientIDs($event)"
             [(ngModel)]="selectedPatients">
     </ng-select>
     <mat-checkbox class="include-contacts">include patient contacts</mat-checkbox>
