return empty summaries if no results

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -1,4 +1,4 @@
-<div class="filter-container" *ngIf='patients && patients.length > 0 && patientSummary'>
+<div class="filter-container" *ngIf='patients && patientSummary'>
   <div class="filter-header">
     <div class="container">
       <h2>{{patients.length}} of {{ total_patients }} Patients Selected</h2>
