--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
@@ -118,7 +118,7 @@ svg-icon {
   margin-bottom: 0.75em;
 }
 // --- country ---
-table-country {
+.table-country {
   display: flex;
   justify-content: space-around;
   align-items: center;
