--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -22,7 +22,9 @@ $secondary-darkcolor: #c54a2b;
 $default-color: #212529;
 $grey-800: $default-color;
 $grey-600: #484d51;
+$grey-500: #5d6267;
 $grey-400: #73797d;
+$grey-350: #8a9095;
 $grey-300: #a2a8ac;
 $grey-200: #d3d9de;
 $grey-100: lighten(#d3d9de, 5%);
