Add in static initial options for cohorts

--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
@@ -3,7 +3,7 @@
 
   <div class="filter-subtype filter-virus">
     <h5 class="filter-sublabel">virus</h5>
-    <app-mini-donut [data]="viruses" [height]="plot_height" [endpoint]="endpoint"></app-mini-donut>
+    <app-mini-donut [data]="viruses" [height]="plot_height" [cohorts]="cohorts" [endpoint]="endpoint"></app-mini-donut>
   </div>
 
   <div class="filter-subtype filter-outcome">
