set initial options for outcomes

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="filter-item filter-patient-types">
-    <app-filter-patient-type [viruses]="patientSummary.patientTypes" [outcomes]="patientSummary.patientOutcomes" [cohorts]="total_cohorts" endpoint="patient"></app-filter-patient-type>
+    <app-filter-patient-type [viruses]="patientSummary.patientTypes" [outcomes]="patientSummary.patientOutcomes" [total_cohorts]="total_cohorts" [total_outcomes]="total_outcomes" endpoint="patient"></app-filter-patient-type>
   </div>
 
   <div class="filter-item filter-elisas">
