--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
@@ -3,11 +3,11 @@
 
   <div class="filter-subtype filter-virus">
     <h5 class="filter-sublabel">virus</h5>
-    <app-mini-donut [data]="viruses" [height]="plot_height" [cohorts]="cohorts" [endpoint]="endpoint"></app-mini-donut>
+    <app-mini-donut [data]="viruses" [height]="plot_height" [cohorts]="total_cohorts" [endpoint]="endpoint"></app-mini-donut>
   </div>
 
   <div class="filter-subtype filter-outcome">
     <h5 class="filter-sublabel">outcome</h5>
-    <app-mini-barplot [data]="outcomes" [name_var]="'key'" [height]="plot_height" [endpoint]="endpoint"></app-mini-barplot>
+    <app-mini-barplot [data]="outcomes" [name_var]="'key'" [height]="plot_height" [options]="total_outcomes" [endpoint]="endpoint"></app-mini-barplot>
   </div>
 </div>
