--- a/sample-viewer/src/app/filters/filter-search/filter-search.component.scss
+++ b/sample-viewer/src/app/filters/filter-search/filter-search.component.scss
@@ -13,7 +13,7 @@
   transition: width 0.5s ease-in-out;
   cursor: pointer;
   float: right;
-  font-family: "Lato", "FontAwesome", sans-serif;
+  font-family: $font-default;
   font-weight: 300;
   margin: 5px 20px 5px 5px;
 }
