--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -1,5 +1,5 @@
 // fonts
-$font-default: "Open Sans", "Helvetica Neue", sans-serif;
+$font-default: "Open Sans", "Helvetica Neue", "FontAwesome", sans-serif;
 
 // placement
 $lr-padding: 55px;
