--- a/sample-viewer/src/app/filters/mini-donut/mini-donut.component.scss
+++ b/sample-viewer/src/app/filters/mini-donut/mini-donut.component.scss
@@ -79,3 +79,11 @@ text.unknown {
     cursor: pointer !important;
   }
 }
+
+.add-data {
+  fill: $cvisb-dark;
+}
+
+.filter-data {
+  fill: accent-redder(A700);
+}
