--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
@@ -2,7 +2,7 @@
   <h4 class="filter-label">patient type</h4>
 
   <div class="filter-subtype filter-virus">
-    <h5 class="filter-sublabel">virus</h5>
+    <h5 class="filter-sublabel">cohort</h5>
     <app-mini-donut [data]="viruses" [height]="plot_height" [cohorts]="total_cohorts" [endpoint]="endpoint"></app-mini-donut>
   </div>
 
