Add slider/checkbox filters, click filter behavior

--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -26,6 +26,7 @@ $grey-500: #5d6267;
 $grey-400: #73797d;
 $grey-350: #8a9095;
 $grey-300: #a2a8ac;
+$grey-250: #bac0c5;
 $grey-200: #d3d9de;
 $grey-100: lighten(#d3d9de, 5%);
 $grey-50: #eef1f4;
