--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="filter-item filter-dates">
-    <app-filter-sample-year [data]="patientSummary.patientYears" endpoint="patient"></app-filter-sample-year>
+    <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="total_years" endpoint="patient"></app-filter-sample-year>
   </div>
 
   <div class="filter-item filter-expts">
