add in static options for missing data

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -36,6 +36,6 @@
   </div>
 
   <div class="filter-item filter-ctry">
-    <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient"></app-filter-location>
+    <app-filter-location [countries]="patientSummary.patientCountries" endpoint="patient" [all_countries]="total_countries"></app-filter-location>
   </div>
 </div>
